hydroflow/tests/compile-fail/surface_null.stderr
error: proc macro panicked
 --> tests/compile-fail/surface_null.rs:4:18
  |
4 |       let mut df = hydroflow_syntax! {
  |  __________________^
5 | |         null();
6 | |     };
  | |_____^
  |
  = help: message: Degenerate subgraph detected, is there a disconnected `null()` or other degenerate pipeline somewhere?
